# sdm-robustness

./: .gitignore  README.md  pyproject.toml  requirements.txt  task1_report_lucian.docx
config/: final_panel.csv  pilot_a_fulcisianus.yaml
configs/: frozen_design.yaml  paths.yaml  task1_gates.yaml
data/: README.md  variable_domain_mapping.csv
docs/: metrics_framework.md  pipeline_specification.md
notebooks/: 01_astacus_analysis.py  01_inspect_master_table.ipynb  02_merge_entities.py  03_panel_figure.py  04_appendix_figures.py  README.md
run_scripts/: bench_Austropotamobius_fulcisianus_pooled.sh  bench_Austropotamobius_torrentium_pooled.sh  bench_Cambarus_latimanus.sh  bench_Cambarus_striatus.sh  bench_Creaserinus_fodiens.sh  bench_Faxonius_limosus_alien.sh  bench_Faxonius_limosus_native.sh  bench_Lacunicambarus_diogenes.sh  bench_Pacifastacus_leniusculus_alien.sh  bench_Pontastacus_leptodactylus_pooled.sh  bench_Procambarus_clarkii_alien.sh  bench_Procambarus_clarkii_native.sh  bench_astacus_astacus.sh  gridb_test_astacus.sh  mx_Austropotamobius_fulcisianus_pooled_lowacc_combined_L0.sh  mx_Austropotamobius_fulcisianus_pooled_lowacc_combined_L10.sh  mx_Austropotamobius_fulcisianus_pooled_lowacc_combined_L20.sh  mx_Austropotamobius_fulcisianus_pooled_lowacc_combined_L35.sh  mx_Austropotamobius_fulcisianus_pooled_lowacc_combined_L5.sh  mx_Austropotamobius_fulcisianus_pooled_lowacc_combined_L50.sh  mx_Austropotamobius_fulcisianus_pooled_lowacc_local_only_L0.sh  mx_Austropotamobius_fulcisianus_pooled_lowacc_local_only_L10.sh  (+346 more)
scripts/: merge_task5c_chunks.py  (+14 more)
(+70 files in other folders)
