[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdm_robustness"
version = "0.1.0"
description = "Stress-testing freshwater SDMs under spatial uncertainty (Miok et al., in prep)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
authors = [
    { name = "Kristian Miok" },
    { name = "Olga N. Petko" },
    { name = "Lucian Pârvulescu" },
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]   # black handles line length

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
